...
        firstName = users[0].firstName.toString()
        lastName = users[0].lastName.toString()
    }

    Column(modifier = modifier.wrapContentHeight(Alignment.CenterVertically)) {
        var modifier = modifier.align(Alignment.CenterHorizontally)
        Text(text = "Welcome, $firstName $lastName!", fontSize = 40.sp, modifier = modifier.padding(horizontal = 40.dp))
        Text(text = "First name:", fontSize = 28.sp, modifier = modifier.padding(horizontal = 40.dp))
        EditPortfolioField(firstNameInput, { firstNameInput = it },  modifier = modifier
            .padding(horizontal = 40.dp)
            .testTag(
                DataSource.TAG_FIRST_NAME_EDIT
            ))
...
